@@ -27,9 +27,9 @@
  */
 package org.hisp.dhis.deduplication.hibernate;
 
-import static org.hisp.dhis.common.AuditType.CREATE;
-import static org.hisp.dhis.common.AuditType.DELETE;
-import static org.hisp.dhis.common.AuditType.UPDATE;
+import static org.hisp.dhis.changelog.ChangeLogType.CREATE;
+import static org.hisp.dhis.changelog.ChangeLogType.DELETE;
+import static org.hisp.dhis.changelog.ChangeLogType.UPDATE;
 import static org.hisp.dhis.external.conf.ConfigurationKey.CHANGELOG_TRACKER;
 
 import java.math.BigInteger;
@@ -41,7 +41,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.persistence.EntityManager;
 import javax.persistence.TypedQuery;
 import javax.persistence.criteria.CriteriaBuilder;
@@ -54,6 +53,7 @@ import org.hisp.dhis.artemis.audit.AuditManager;
 import org.hisp.dhis.artemis.audit.AuditableEntity;
 import org.hisp.dhis.audit.AuditScope;
 import org.hisp.dhis.audit.AuditType;
+import org.hisp.dhis.changelog.ChangeLogType;
 import org.hisp.dhis.common.hibernate.HibernateIdentifiableObjectStore;
 import org.hisp.dhis.deduplication.DeduplicationMergeParams;
 import org.hisp.dhis.deduplication.DeduplicationStatus;
@@ -72,9 +72,10 @@ import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.trackedentity.TrackedEntity;
 import org.hisp.dhis.trackedentity.TrackedEntityStore;
 import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValue;
-import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValueAudit;
-import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValueAuditStore;
-import org.hisp.dhis.user.CurrentUserService;
+import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValueChangeLog;
+import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValueChangeLogStore;
+import org.hisp.dhis.user.CurrentUserUtil;
+import org.hisp.dhis.user.User;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Repository;
@@ -87,7 +88,7 @@ public class HibernatePotentialDuplicateStore
 
   private final TrackedEntityStore trackedEntityStore;
 
-  private final TrackedEntityAttributeValueAuditStore trackedEntityAttributeValueAuditStore;
+  private final TrackedEntityAttributeValueChangeLogStore trackedEntityAttributeValueChangeLogStore;
 
   private final DhisConfigurationProvider config;
 
@@ -95,23 +96,15 @@ public class HibernatePotentialDuplicateStore
       EntityManager entityManager,
       JdbcTemplate jdbcTemplate,
       ApplicationEventPublisher publisher,
-      CurrentUserService currentUserService,
       AclService aclService,
       TrackedEntityStore trackedEntityStore,
       AuditManager auditManager,
-      TrackedEntityAttributeValueAuditStore trackedEntityAttributeValueAuditStore,
+      TrackedEntityAttributeValueChangeLogStore trackedEntityAttributeValueChangeLogStore,
       DhisConfigurationProvider config) {
-    super(
-        entityManager,
-        jdbcTemplate,
-        publisher,
-        PotentialDuplicate.class,
-        currentUserService,
-        aclService,
-        false);
+    super(entityManager, jdbcTemplate, publisher, PotentialDuplicate.class, aclService, false);
     this.trackedEntityStore = trackedEntityStore;
     this.auditManager = auditManager;
-    this.trackedEntityAttributeValueAuditStore = trackedEntityAttributeValueAuditStore;
+    this.trackedEntityAttributeValueChangeLogStore = trackedEntityAttributeValueChangeLogStore;
     this.config = config;
   }
 
@@ -148,7 +141,7 @@ public class HibernatePotentialDuplicateStore
                     order.getDirection().isAscending()
                         ? cb.asc(root.get(order.getField()))
                         : cb.desc(root.get(order.getField())))
-            .collect(Collectors.toList()));
+            .toList());
 
     TypedQuery<PotentialDuplicate> relationshipTypedQuery = getSession().createQuery(cq);
 
@@ -181,7 +174,7 @@ public class HibernatePotentialDuplicateStore
     return status == DeduplicationStatus.ALL
         ? Arrays.stream(DeduplicationStatus.values())
             .filter(s -> s != DeduplicationStatus.ALL)
-            .collect(Collectors.toList())
+            .toList()
         : Collections.singletonList(status);
   }
 
@@ -225,12 +218,12 @@ public class HibernatePotentialDuplicateStore
         .forEach(
             av -> {
               TrackedEntityAttributeValue updatedTeav;
-              org.hisp.dhis.common.AuditType auditType;
+              ChangeLogType changeLogType;
               if (originalAttributeValueMap.containsKey(av.getAttribute().getUid())) {
                 // Teav exists in original, overwrite the value
                 updatedTeav = originalAttributeValueMap.get(av.getAttribute().getUid());
                 updatedTeav.setValue(av.getValue());
-                auditType = UPDATE;
+                changeLogType = UPDATE;
               } else {
                 // teav does not exist in original, so create new and attach
                 // it to original
@@ -238,7 +231,7 @@ public class HibernatePotentialDuplicateStore
                 updatedTeav.setAttribute(av.getAttribute());
                 updatedTeav.setTrackedEntity(original);
                 updatedTeav.setValue(av.getValue());
-                auditType = CREATE;
+                changeLogType = CREATE;
               }
               getSession().delete(av);
               // We need to flush to make sure the previous teav is
@@ -249,25 +242,27 @@ public class HibernatePotentialDuplicateStore
 
               getSession().saveOrUpdate(updatedTeav);
 
-              auditTeav(av, updatedTeav, auditType);
+              auditTeav(av, updatedTeav, changeLogType);
             });
   }
 
   private void auditTeav(
       TrackedEntityAttributeValue av,
       TrackedEntityAttributeValue createOrUpdateTeav,
-      org.hisp.dhis.common.AuditType auditType) {
-    String currentUsername = currentUserService.getCurrentUsername();
+      ChangeLogType changeLogType) {
+    String currentUsername = CurrentUserUtil.getCurrentUsername();
 
-    TrackedEntityAttributeValueAudit deleteTeavAudit =
-        new TrackedEntityAttributeValueAudit(av, av.getAuditValue(), currentUsername, DELETE);
-    TrackedEntityAttributeValueAudit updatedTeavAudit =
-        new TrackedEntityAttributeValueAudit(
-            createOrUpdateTeav, createOrUpdateTeav.getValue(), currentUsername, auditType);
+    TrackedEntityAttributeValueChangeLog deleteTeavAudit =
+        new TrackedEntityAttributeValueChangeLog(av, av.getAuditValue(), currentUsername, DELETE);
+    TrackedEntityAttributeValueChangeLog updatedTeavAudit =
+        new TrackedEntityAttributeValueChangeLog(
+            createOrUpdateTeav, createOrUpdateTeav.getValue(), currentUsername, changeLogType);
 
     if (config.isEnabled(CHANGELOG_TRACKER)) {
-      trackedEntityAttributeValueAuditStore.addTrackedEntityAttributeValueAudit(deleteTeavAudit);
-      trackedEntityAttributeValueAuditStore.addTrackedEntityAttributeValueAudit(updatedTeavAudit);
+      trackedEntityAttributeValueChangeLogStore.addTrackedEntityAttributeValueChangeLog(
+          deleteTeavAudit);
+      trackedEntityAttributeValueChangeLogStore.addTrackedEntityAttributeValueChangeLog(
+          updatedTeavAudit);
     }
   }
 
@@ -291,15 +286,22 @@ public class HibernatePotentialDuplicateStore
         duplicate.getEnrollments().stream()
             .filter(e -> !e.isDeleted())
             .filter(e -> enrollments.contains(e.getUid()))
-            .collect(Collectors.toList());
+            .toList();
 
     enrollmentList.forEach(duplicate.getEnrollments()::remove);
+
+    User currentUser =
+        CurrentUserUtil.getCurrentUserDetails() == null
+            ? null
+            : entityManager.getReference(
+                User.class, CurrentUserUtil.getCurrentUserDetails().getId());
 
     enrollmentList.forEach(
         e -> {
           e.setTrackedEntity(original);
-          e.setLastUpdatedBy(currentUserService.getCurrentUser());
-          e.setLastUpdatedByUserInfo(UserInfoSnapshot.from(currentUserService.getCurrentUser()));
+          e.setLastUpdatedBy(currentUser);
+          e.setLastUpdatedByUserInfo(
+              UserInfoSnapshot.from(CurrentUserUtil.getCurrentUserDetails()));
           e.setLastUpdated(new Date());
           getSession().update(e);
         });
